--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ProjectManager</title>
-    <link rel="stylesheet" href="dist/app.css" />
-    <script src="dist/app.js" defer></script>
+    <link rel="stylesheet" href="dist/css/app.min.css" />
+    <script src="dist/js/app.js" defer></script>
   </head>
   <body>
     <template id="project-input">
       <form>
         <div class="form-control">
-          <label for="title">Title</label>
+          <label for="title">Название</label>
           <input type="text" id="title" />
         </div>
         <div class="form-control">
-          <label for="description">Description</label>
+          <label for="description">Описание</label>
           <textarea id="description" rows="3"></textarea>
         </div>
         <div class="form-control">
-          <label for="people">People</label>
+          <label for="people">Люди</label>
           <input type="number" id="people" step="1" min="0" max="10" />
         </div>
-        <button type="submit">ADD PROJECT</button>
+        <button type="submit">ДОБАВИТЬ ПРОЕКТ</button>
       </form>
     </template>
     <template id="single-project">
