--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ProjectManager</title>
     <link rel="stylesheet" href="dist/css/app.min.css" />
-    <script src="dist/js/app.js" defer></script>
+    <script src="dist/js/bundle.js" defer></script>
   </head>
   <body>
     <template id="project-input">
